--- a/web/src/index.css
+++ b/web/src/index.css
@@ -8,6 +8,7 @@ html, body {
 /* 2. 强制root容器占满全屏宽度 */
 #root {
   width: 100%;
+  height: 100%;
 }
 
 :root {
@@ -24,6 +25,7 @@ html, body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   flex: 1;
+  height: 100%;
 }
 
 a {
